--- a/style.css
+++ b/style.css
@@ -4,7 +4,19 @@
 }
 
 #chart_div {
+  width: 1200px;
+  height: 600px;
+}
+
+.happiness {
+  writing-mode: tb-rl;
+  transform: rotate(-180deg);
+  margin: 25px 50px 200px 100px;
+  font-size: 50px;
+}
+
+.chart {
+  display: inline-grid;
   margin: 50px auto;
-  width: 600px;
-  height: 300px;
+  display: flex;
 }
